--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,11 @@
   font-size: 36px;
   margin: 50px;
 }
+
+.app__loading {
+  font-size: 28px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
